--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.geo_fence_android"
+        applicationId "com.example.geofence"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -47,4 +47,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+
+    implementation 'com.roam.sdk:roam-android:0.0.15'
+
 }
