--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,21 @@
 buildscript {
     repositories {
         gradlePluginPortal()
+        mavenCentral()
+        google()
+        jcenter()
+
     }
     dependencies {
         classpath('org.springframework.boot:spring-boot-gradle-plugin:2.4.1')
         classpath 'com.google.gms:google-services:+'
     }
 }
+
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.0' apply false
-
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
