--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://com-roam-android.s3.amazonaws.com/' }
     }
 }
 rootProject.name = "Geo-fence_android"
